examples/test/testpolicy1908.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1908
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key49: value13
      key43: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value46
      podSelector:
        matchLabels:
          key7: value48
          key2: value27
          key34: value31
